--- a/informatics_challenge_2022.Rmd
+++ b/informatics_challenge_2022.Rmd
@@ -355,6 +355,9 @@ done
 
 31.  For your submission, put your results up into a public GitHub repository
 and provide the link
+```{verbatim, max.height='100px'}
+https://github.com/luda-popova/InfoChallenge
+```
 
 32.  Make sure your repo includes at least two branches and two commits
 
@@ -402,6 +405,9 @@ plot1
 
 34.  Using the command line, download the SRR10197556 dataset from the NCBI SRA
 repository
+```{verbatim}
+wget https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10197556/SRR10197556.1
+```
 
 ## Bash variable expansion
 
@@ -442,8 +448,9 @@ test your code.
 39.  How many times does sequence "GATTACA" appear in this fasta file? `/reference/homo_sapiens/hg38/ucsc_assembly/illumina_download/Sequence/WholeGenomeFasta/genome.fa`
 
 ```{verbatim}
-grep -i "GATTACA" genome.fa > results.txt > wc -l 
-610638
+grep -io "GATTACA" genome.fa | wc -l 
+
+611584 times
 ```
 ## Using awk
 
@@ -451,7 +458,9 @@ grep -i "GATTACA" genome.fa > results.txt > wc -l
 and the Unix `awk` command to keep only the lines where first column is "chr11"
 and the fourth column is greater than 100,000. How many lines are in the output?
 ```{verbatim}
+awk 'BEGIN {count=0} $1=="chr11" && $4>100000 {count ++} END {print count}' genes.gtf
 
+54789 lines 
 ```
 ------------------------------------------------------------------------
 
